minor fixes and swagger documentation's finished
