# internal/auth/signInRequest.go
@@ -1,6 +1,8 @@
 package auth
 
+// SignInRequest model info
+// @Description Model that represents user's input to sign in the service provided
 type SignInRequest struct {
-	Username string
-	Password string
+	Username string //Username of the user
+	Password string //Password of the user
 }
